@@ -287,5 +287,12 @@ editor_engine_new (GtkHTMLControlData *cd)
 
 	ee->cd = cd;
 
+	/* This engine will be returned to the composer window.
+	 * The html-widget will be used by the composer to 
+	 * provide DnD to the composer window's GtkHTML component
+	 */
+
+	g_object_set_data (ee, "html-widget", cd->html);
+	
 	return ee;
 }
